--- a/django/.env
+++ b/django/.env
@@ -1,6 +1,6 @@
-DB_NAME=test_db
-DB_USER=root
-DB_PASSWORD=neeraj
-DB_PORT=3306
-DB_HOST=db
-OPENAI_APIKEY=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
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_PORT=
+DB_HOST=
+APIKEY=
